--- a/MovieWebAssembly_App/Pages/FetchData.razor
+++ b/MovieWebAssembly_App/Pages/FetchData.razor
@@ -60,6 +60,7 @@
             Console.WriteLine(hotelroom.RegularRate);
             Console.WriteLine(hotelroom.Occupancy);
         }
-        //HotelRooms = await hotelRoomRepository.GetAllHotelRooms();
+
+        HotelRooms = hotelRooms;
     }
 }
