--- a/MovieWebAssembly_App/Pages/FetchData.razor
+++ b/MovieWebAssembly_App/Pages/FetchData.razor
@@ -1,6 +1,8 @@
 ﻿@page "/fetchdata"
 @using Models
 @using MovieWebAssembly_App.ApiClient
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <div class="row mt-4">
     <div class="col-8">
